# Astoria

./: .env.example  Cargo.toml  README.md  dockerfile
src/: main.rs
src/kafka/: consumer.rs
src/s3/: minio.rs
